started projects page

--- a/projects.html
+++ b/projects.html
@@ -30,9 +30,9 @@
         <main>
 			<div class="projects-space">
 				<div class="projects-content">
-					<div class="projects-text">
-						<h1 class="projects-h1">Projects</h1>
-						<p class="projects-p">d</p>
+					<h1 class="projects-h1">Projects</h1>
+					<div class="projects-body">
+						
 					</div>
 				</div>
 			</div>
