finished projects page

--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,19 @@
 				<div class="projects-content">
 					<h1 class="projects-h1">Projects</h1>
 					<div class="projects-body">
-						
+						<div class="project">
+							<h2 class="project-name">Workout Advice Generator</h2>
+							<div class="project-text">
+								<p class="project-summary">&emsp;&emsp;As part of the codecademy curriculum, the "Mixed Messages" assignment was my first project using JavaScript. I chose to create a Workout Advice Generator. Each time a user runs the program, it provides a randomized piece of workout advice. The workout advice is created from 3 pieces of data: a goal, something to start doing, and something to stop doing. Each piece of data only has a few possible outputs, so the program is fairly limited. Nonetheless, this is my first self-written JavaScript program.
+									<ul class="project-technology-ul">
+										<li class="project-technology-li">JavaScript</li>
+									</ul>
+								</p>
+							</div>
+							<div class="project-media">
+								<a href="workout-advice-generator.html" target="_blank"><img src="C:/Software/Projects/Personal Portfolio Website/Images/Workout-Advice-Generator.png" alt="a picture of Ethan's Workout Advice Generator" class="project-img"></a>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
