change images to relative links

--- a/about-me.html
+++ b/about-me.html
@@ -15,7 +15,7 @@
 		<header>
 			<div class="header-content">
 				<div class="header-text">
-					<img class="header-logo" src="C:/Software/Projects/Personal Portfolio Website/Images/8H4A7366.jpg" alt="Ethan with his son, Jack">
+					<img class="header-logo" src="Images/8H4A7366.jpg" alt="Ethan with his son, Jack">
 					<h2 class="header-name">Ethan Aldridge</h2>
 					<h3 class="header-subname">/Portfolio</h3>
 				</div>
@@ -36,14 +36,14 @@
 						<p class="about-me-p">&emsp;&emsp;Hello! My name is Ethan Aldridge. I'm a father, health enthusiast, author, guitarist, and an aspiring software developer. On this page, you'll find a bit about who I am as a person. The rest of this website is dedicated to my work in software. At the moment, I'm working my way through codecademy's full-stack course. I'm interested in how permaculture and blockchain technology can be used to improve the way we live. If you'd like to get in touch, you know what to do!</p>
 					</div>
 					<div class="about-me-media">
-						<img class="about-me-img" src="C:/Software/Projects/Personal Portfolio Website/Images/headshot.jpg" alt="picture of Ethan smiling">
+						<img class="about-me-img" src="Images/headshot.jpg" alt="picture of Ethan smiling">
 					</div>
 				</div>
 			</div>
 			<div class="father-space">
 				<div class="father-content">
 					<div class="father-media">
-						<img src="C:/Software/Projects/Personal Portfolio Website/Images/Jack + I.JPG" alt="Ethan and his son, Jack, walking down a sidewalk at a park" class="father-img">
+						<img src="Images/Jack + I.JPG" alt="Ethan and his son, Jack, walking down a sidewalk at a park" class="father-img">
 					</div>
 					<div class="father-text">
 						<h2 class="father-h2">Father</h2>
@@ -61,14 +61,14 @@
 						<div class="health-media">
 							<div class="health-slider-wrapper">
 								<div class="health-img-list">
-									<img src="C:/Software/Projects/Personal Portfolio Website/Images/physique.jpg" alt="Ethan doing a pose in half-natty lighting" class="health-img-v">
-									<img src="C:/Software/Projects/Personal Portfolio Website/Images/Side Split.jpg" alt="Ethan doing a side split while holding Jack" class="health-img-h">
-									<img src="C:/Software/Projects/Personal Portfolio Website/Images/back pose.JPG" alt="Ethan doing a double bicep pose" class="health-img-h">
-									<img src="C:/Software/Projects/Personal Portfolio Website/Images/Movement.JPG" alt="Ethan doing a shoulderstand on rings" class="health-img-v">
-									<img src="C:/Software/Projects/Personal Portfolio Website/Images/Front Split.jpg" alt="Ethan doing a front split" class="health-img-h-s">
-									<img src="C:/Software/Projects/Personal Portfolio Website/Images/handstand.JPG" alt="Ethan doing a handstand at sunset" class="health-img-h">
-									<img src="C:/Software/Projects/Personal Portfolio Website/Images/Nutrition.JPG" alt="a cutting board covered in food that Ethan eats" class="health-img-v">
-									<img src="C:/Software/Projects/Personal Portfolio Website/Images/Back Lever.JPG" alt="Ethan doing a back lever on rings" class="health-img-h">
+									<img src="Images/physique.jpg" alt="Ethan doing a pose in half-natty lighting" class="health-img-v">
+									<img src="Images/Side Split.jpg" alt="Ethan doing a side split while holding Jack" class="health-img-h">
+									<img src="Images/back pose.JPG" alt="Ethan doing a double bicep pose" class="health-img-h">
+									<img src="Images/Movement.JPG" alt="Ethan doing a shoulderstand on rings" class="health-img-v">
+									<img src="Images/Front Split.jpg" alt="Ethan doing a front split" class="health-img-h-s">
+									<img src="Images/handstand.JPG" alt="Ethan doing a handstand at sunset" class="health-img-h">
+									<img src="Images/Nutrition.JPG" alt="a cutting board covered in food that Ethan eats" class="health-img-v">
+									<img src="Images/Back Lever.JPG" alt="Ethan doing a back lever on rings" class="health-img-h">
 								</div>
 							</div>
 							<div class="health-scrollbar">
@@ -111,30 +111,30 @@
 							<button id="art-prev-slide" class="art-slide-button material-symbols-outlined">chevron_left</button>
 							<div class="art-slider-wrapper">
 								<div class="art-img-list">
-									<img src="C:/Software/Projects/Personal Portfolio Website/Images/mother drawing.jpg" alt="Ethan's drawing of a mother and her baby" class="art-img">
-									<img src="C:/Software/Projects/Personal Portfolio Website/Images/mandala drawing.jpg" alt="Ethan's drawing of a mandala" class="art-img">
-									<img src="C:/Software/Projects/Personal Portfolio Website/Images/ido drawing.jpg" alt="Ethan's drawing of Ido Portal in a handstand" class="art-img">
-									<img src="C:/Software/Projects/Personal Portfolio Website/Images/abstract.jpg" alt="an abstract drawing" class="art-img">
-									<img src="C:/Software/Projects/Personal Portfolio Website/Images/mandala.jpg" alt="another mandala drawing" class="art-img">
-									<img src="C:/Software/Projects/Personal Portfolio Website/Images/eye.jpg" alt="drawing of an eye" class="art-img">
-									<img src="C:/Software/Projects/Personal Portfolio Website/Images/arena fighter.jpg" alt="drawing of an arena fighter" class="art-img">
-									<img src="C:/Software/Projects/Personal Portfolio Website/Images/soul knight.jpg" alt="drawing of a soul knight" class="art-img">
-									<img src="C:/Software/Projects/Personal Portfolio Website/Images/warbringer.jpg" alt="drawing of a warbringer" class="art-img">
-									<img src="C:/Software/Projects/Personal Portfolio Website/Images/reaper.jpg" alt="drawing of a reaper" class="art-img">
-									<img src="C:/Software/Projects/Personal Portfolio Website/Images/discus.jpg" alt="drawing of a discus thrower" class="art-img">
-									<img src="C:/Software/Projects/Personal Portfolio Website/Images/sandow.jpg" alt="drawing of Eugen Sandow" class="art-img">
-									<img src="C:/Software/Projects/Personal Portfolio Website/Images/kurt.jpg" alt="drawing of Kurt Cobain" class="art-img">
-									<img src="C:/Software/Projects/Personal Portfolio Website/Images/Jim Hawkins.jpg" alt="drawing of Jim Hawkins from Treasure Planet" class="art-img">
-									<img src="C:/Software/Projects/Personal Portfolio Website/Images/feist.jpg" alt="drawing of the singer Feist" class="art-img">
-									<img src="C:/Software/Projects/Personal Portfolio Website/Images/hands.jpg" alt="a drawing of stacked hands" class="art-img">
-									<img src="C:/Software/Projects/Personal Portfolio Website/Images/heads.jpg" alt="a drawing of heads from different angles" class="art-img">
-									<img src="C:/Software/Projects/Personal Portfolio Website/Images/hands drawing a rose.jpg" alt="a drawing of hands which are drawing a rose" class="art-img">
-									<img src="C:/Software/Projects/Personal Portfolio Website/Images/call of duty.jpg" alt="a drawing of a soldier" class="art-img">
-									<img src="C:/Software/Projects/Personal Portfolio Website/Images/flowers.jpg" alt="another drawing of flowers" class="art-img">
-									<img src="C:/Software/Projects/Personal Portfolio Website/Images/horse.jpg" alt="a drawing of a horse" class="art-img">
-									<img src="C:/Software/Projects/Personal Portfolio Website/Images/flower drawing.jpg" alt="Ethan's drawing of some flowers" class="art-img">
-									<img src="C:/Software/Projects/Personal Portfolio Website/Images/tree drawing.jpg" alt="Ethan's drawing of a tree" class="art-img">
-									<img src="C:/Software/Projects/Personal Portfolio Website/Images/roses drawing.jpg" alt="Ethan's drawing of some roses" class="art-img">
+									<img src="Images/mother drawing.jpg" alt="Ethan's drawing of a mother and her baby" class="art-img">
+									<img src="Images/mandala drawing.jpg" alt="Ethan's drawing of a mandala" class="art-img">
+									<img src="Images/ido drawing.jpg" alt="Ethan's drawing of Ido Portal in a handstand" class="art-img">
+									<img src="Images/abstract.jpg" alt="an abstract drawing" class="art-img">
+									<img src="Images/mandala.jpg" alt="another mandala drawing" class="art-img">
+									<img src="Images/eye.jpg" alt="drawing of an eye" class="art-img">
+									<img src="Images/arena fighter.jpg" alt="drawing of an arena fighter" class="art-img">
+									<img src="Images/soul knight.jpg" alt="drawing of a soul knight" class="art-img">
+									<img src="Images/warbringer.jpg" alt="drawing of a warbringer" class="art-img">
+									<img src="Images/reaper.jpg" alt="drawing of a reaper" class="art-img">
+									<img src="Images/discus.jpg" alt="drawing of a discus thrower" class="art-img">
+									<img src="Images/sandow.jpg" alt="drawing of Eugen Sandow" class="art-img">
+									<img src="Images/kurt.jpg" alt="drawing of Kurt Cobain" class="art-img">
+									<img src="Images/Jim Hawkins.jpg" alt="drawing of Jim Hawkins from Treasure Planet" class="art-img">
+									<img src="Images/feist.jpg" alt="drawing of the singer Feist" class="art-img">
+									<img src="Images/hands.jpg" alt="a drawing of stacked hands" class="art-img">
+									<img src="Images/heads.jpg" alt="a drawing of heads from different angles" class="art-img">
+									<img src="Images/hands drawing a rose.jpg" alt="a drawing of hands which are drawing a rose" class="art-img">
+									<img src="Images/call of duty.jpg" alt="a drawing of a soldier" class="art-img">
+									<img src="Images/flowers.jpg" alt="another drawing of flowers" class="art-img">
+									<img src="Images/horse.jpg" alt="a drawing of a horse" class="art-img">
+									<img src="Images/flower drawing.jpg" alt="Ethan's drawing of some flowers" class="art-img">
+									<img src="Images/tree drawing.jpg" alt="Ethan's drawing of a tree" class="art-img">
+									<img src="Images/roses drawing.jpg" alt="Ethan's drawing of some roses" class="art-img">
 								</div>
 							</div>
 							<button id="art-next-slide" class="art-slide-button material-symbols-outlined">chevron_right</button>
@@ -146,10 +146,10 @@
 		<footer>
 			<div class="footer-space">
 				<div class="footer-content">
-					<a href="https://github.com/ethanjaldridge" target="_blank"><img src="C:/Software/Projects/Personal Portfolio Website/Images/github-logo.png" alt="github logo" class="github-logo"></a>
-					<a href="https://www.instagram.com/ethanjaldridge/" target="_blank"><img src="C:/Software/Projects/Personal Portfolio Website/Images/instagram-logo.png" alt="instagram logo" class="instagram-logo"></a>
-					<a href="https://www.youtube.com/@ethanaldridge1639" target="_blank"><img src="C:/Software/Projects/Personal Portfolio Website/Images/youtube-logo.png" alt="youtube logo" class="youtube-logo"></a>
-					<a href="mailto:ethanjaldridge97@gmail.com" target="_blank"><img src="C:/Software/Projects/Personal Portfolio Website/Images/email-logo.png" alt="email logo" class="email-logo"></a>
+					<a href="https://github.com/ethanjaldridge" target="_blank"><img src="Images/github-logo.png" alt="github logo" class="github-logo"></a>
+					<a href="https://www.instagram.com/ethanjaldridge/" target="_blank"><img src="Images/instagram-logo.png" alt="instagram logo" class="instagram-logo"></a>
+					<a href="https://www.youtube.com/@ethanaldridge1639" target="_blank"><img src="Images/youtube-logo.png" alt="youtube logo" class="youtube-logo"></a>
+					<a href="mailto:ethanjaldridge97@gmail.com" target="_blank"><img src="Images/email-logo.png" alt="email logo" class="email-logo"></a>
 				</div>
 			</div>
 		</footer>
