--- a/skills.html
+++ b/skills.html
@@ -14,7 +14,7 @@
         <header>
 			<div class="header-content">
 				<div class="header-text">
-					<img class="header-logo" src="C:/Software/Projects/Personal Portfolio Website/Images/8H4A7366.jpg" alt="Ethan with his son, Jack">
+					<img class="header-logo" src="Images/8H4A7366.jpg" alt="Ethan with his son, Jack">
 					<h2 class="header-name">Ethan Aldridge</h2>
 					<h3 class="header-subname">/Portfolio</h3>
 				</div>
@@ -116,10 +116,10 @@
         <footer>
 			<div class="footer-space">
 				<div class="footer-content">
-					<a href="https://github.com/ethanjaldridge" target="_blank"><img src="C:/Software/Projects/Personal Portfolio Website/Images/github-logo.png" alt="github logo" class="github-logo"></a>
-					<a href="https://www.instagram.com/ethanjaldridge/" target="_blank"><img src="C:/Software/Projects/Personal Portfolio Website/Images/instagram-logo.png" alt="instagram logo" class="instagram-logo"></a>
-					<a href="https://www.youtube.com/@ethanaldridge1639" target="_blank"><img src="C:/Software/Projects/Personal Portfolio Website/Images/youtube-logo.png" alt="youtube logo" class="youtube-logo"></a>
-					<a href="mailto:ethanjaldridge97@gmail.com" target="_blank"><img src="C:/Software/Projects/Personal Portfolio Website/Images/email-logo.png" alt="email logo" class="email-logo"></a>
+					<a href="https://github.com/ethanjaldridge" target="_blank"><img src="Images/github-logo.png" alt="github logo" class="github-logo"></a>
+					<a href="https://www.instagram.com/ethanjaldridge/" target="_blank"><img src="Images/instagram-logo.png" alt="instagram logo" class="instagram-logo"></a>
+					<a href="https://www.youtube.com/@ethanaldridge1639" target="_blank"><img src="Images/youtube-logo.png" alt="youtube logo" class="youtube-logo"></a>
+					<a href="mailto:ethanjaldridge97@gmail.com" target="_blank"><img src="Images/email-logo.png" alt="email logo" class="email-logo"></a>
 				</div>
 			</div>
 		</footer>
