media queries update

--- a/skills.html
+++ b/skills.html
@@ -24,6 +24,22 @@
 					<a class ="header-nav-a" href="#">Skills</a>
 					<a class ="header-nav-a" href="contact.html">Contact</a>
 				</div>
+				<div class="menu-wrap">
+					<input type="checkbox" class="toggler">
+					<div class="hamburger"><div></div></div>
+					<div class="menu">
+						<div>
+							<div>
+								<ul>
+									<li><a href="about-me.html">ABOUT ME</a></li>
+									<li><a href="projects.html">PROJECTS</a></li>
+									<li><a href="skills.html">SKILLS</a></li>
+									<li><a href="contact.html">CONTACT</a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
         </header>	
 
