--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<h3 class="header-subname">/Portfolio</h3>
 				</div>
 				<div class="header-nav">
-					<a class="header-nav-a" href="#">About Me</a>
+					<a class="header-nav-a" href="index.html">About Me</a>
 					<a class="header-nav-a" href="projects.html">Projects</a>
 					<a class="header-nav-a" href="skills.html">Skills</a>
 					<a class="header-nav-a" href="contact.html">Contact</a>
@@ -32,7 +32,7 @@
 						<div>
 							<div>
 								<ul>
-									<li><a href="about-me.html">ABOUT ME</a></li>
+									<li><a href="index.html">ABOUT ME</a></li>
 									<li><a href="projects.html">PROJECTS</a></li>
 									<li><a href="skills.html">SKILLS</a></li>
 									<li><a href="contact.html">CONTACT</a></li>
