--- a/skills.html
+++ b/skills.html
@@ -19,9 +19,9 @@
 					<h3 class="header-subname">/Portfolio</h3>
 				</div>
 				<div class="header-nav">
-					<a class ="header-nav-a" href="about-me.html">About Me</a>
+					<a class ="header-nav-a" href="index.html">About Me</a>
 					<a class ="header-nav-a" href="projects.html">Projects</a>
-					<a class ="header-nav-a" href="#">Skills</a>
+					<a class ="header-nav-a" href="skills">Skills</a>
 					<a class ="header-nav-a" href="contact.html">Contact</a>
 				</div>
 				<div class="menu-wrap">
@@ -31,7 +31,7 @@
 						<div>
 							<div>
 								<ul>
-									<li><a href="about-me.html">ABOUT ME</a></li>
+									<li><a href="index.html">ABOUT ME</a></li>
 									<li><a href="projects.html">PROJECTS</a></li>
 									<li><a href="skills.html">SKILLS</a></li>
 									<li><a href="contact.html">CONTACT</a></li>
