--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Contact - Ethan Aldridge Portfolio</title>
+        <title>Ethan Aldridge's Portfolio - Contact</title>
         <link rel="stylesheet" href="style.css">
         <script src="script.js" defer></script>
     </head>
