--- a/skills.html
+++ b/skills.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Skills - Ethan Aldridge Portfolio</title>
+        <title>Ethan Aldridge's Portfolio - Skills</title>
         <link rel="stylesheet" href="style.css">
         <script src="script.js" defer></script>
     </head>
